[package]
name = "screeps-rs"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
description = "WIP native Screeps client using Rust and Conrod."

repository = "https://github.com/daboross/screeps-rs"

readme = "README.md"

keywords = []
categories = ["games"]
license = "MIT"

[lib]
path = "src/rust/lib.rs"

[profile.release]
lto = true

[dependencies]
# Graphics
glium = "0.16"
glutin = "0.7"
rusttype = "0.2"
# now below:
# conrod = { version = "0.51", features = ["glium", "winit"] }
# Networking
futures = "0.1"
tokio-core = "0.1"
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git" }
# Logging
time = "0.1"
chrono = "0.3"
log = "0.3"
fern = "0.4"
clap = "2.22"

[dependencies.conrod]
# waiting on my finishing https://github.com/PistonDevelopers/conrod/pull/964
git = "https://github.com/daboross/conrod.git"
branch = "add-password-text-boxes"
features = ["glium", "winit"]

[[bin]]
name = "scrs"
doc = false
