[package]
name = "screeps-rs"
version = "0.1.1"
authors = ["David Ross <daboross@daboross.net>"]
description = "WIP native Screeps client using Rust and Conrod."

repository = "https://github.com/daboross/screeps-rs"

readme = "README.md"

keywords = []
categories = ["games"]
license = "MIT"

[lib]
path = "src/rust/lib.rs"

[profile.release]
lto = true

[dependencies]
# Graphics
glium = "0.16"
glutin = "0.7"
rusttype = "0.2"
# now below:
# conrod = { version = "0.51", features = ["glium", "winit"] }
# Networking
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
websocket = "0.20"
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git", default-features = false }
# Caching
time = "0.1"
bincode = "0.8"
rocksdb = "0.6"
app_dirs = "1.1"
serde = "1.0"
serde_derive = "1.0"
arrayvec = { version = "0.3", features = ["serde"] }
# Logging
chrono = "0.3"
log = "0.3"
fern = "0.4"
# Command-line
clap = "2.22"

[dependencies.conrod]
# waiting on my finishing https://github.com/PistonDevelopers/conrod/pull/964
git = "https://github.com/daboross/conrod.git"
branch = "add-password-text-boxes"
features = ["glium", "winit"]

[[bin]]
name = "scrs"
doc = false

[replace]
"arrayvec:0.3.23" = { git = "https://github.com/daboross/arrayvec.git", branch = "serde-0.3" }
"rusttype:0.2.1" = { git = "https://github.com/daboross/rusttype.git", branch = "possibly-fix-rasterizer-akashi-font" }
