[workspace]
members = [
    "networking",
    "conrod-ui",
    "scrs-jvm",
]

[replace]
"arrayvec:0.3.23" = { git = "https://github.com/daboross/arrayvec.git", branch = "serde-0.3" }
"rusttype:0.2.1" = { git = "https://github.com/daboross/rusttype.git", branch = "possibly-fix-rasterizer-akashi-font" }
