[package]
name = "screeps-rs-network"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
description = "Networking and caching for a work in progress native Screeps client."

repository = "https://github.com/daboross/screeps-rs"

readme = "../README.md"

keywords = []
categories = ["games", "networking"]
license = "MIT"

[dependencies]
# Networking
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
websocket = "0.20"
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git", default-features = false }
# Caching
time = "0.1"
bincode = "0.8"
rocksdb = "0.8"
app_dirs = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
arrayvec = { version = "0.4", features = ["serde-1"] }
# Logging
log = "0.3"
