[package]
name = "scrs-network"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
description = "WIP native Sreeps client backend, containing networking and caching, but no graphics."

repository = "https://github.com/daboross/screeps-rs"

readme = "../README.md"

keywords = []
categories = ["games", "networking"]
license = "MIT"

[dependencies]
# Networking
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
websocket = "0.20"
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git", default-features = false }
# Caching
time = "0.1"
bincode = "0.8"
rocksdb = "0.6"
app_dirs = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
arrayvec = { version = "0.3", features = ["serde"] }
# Logging
log = "0.3"

[replace]
"arrayvec:0.3.23" = { git = "https://github.com/daboross/arrayvec.git", branch = "serde-0.3" }
