[package]
name = "sceeps-rs-jvm"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]

[lib]
name = "screeps_rs_jvm"
crate-type = ["cdylib"]

[dependencies]
# Types:
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git", default-features = false }
# Networking
scrs-network = { path = "../networking" }
# Logging
chrono = "0.4"
log = "0.3"
fern = "0.4"

[build-dependencies]
syntex = "0.58.1"
env_logger = "0.4.2"
bindgen = "0.26.3"
log = "0.3"
rust_swig = { git = "https://github.com/Dushistov/rust_swig.git" }
