[package]
name = "screeps-rs-ui"
version = "0.1.5"
authors = ["David Ross <daboross@daboross.net>"]
description = "User interface for a work in progress native Screeps client."

repository = "https://github.com/daboross/screeps-rs"

readme = "../README.md"

keywords = []
categories = ["games"]
license = "MIT"

[lib]
path = "src/rust/lib.rs"

[dependencies]
# Graphics
glium = "0.17"
glutin = "0.9"
rusttype = "0.2"
time = "0.1"
conrod = { version = "0.54.0", features = ["winit", "glium"] }
conrod_derive = "0.1.0"
# Types:
screeps-api = { git = "https://github.com/daboross/rust-screeps-api.git", default-features = false }
# Networking
screeps-rs-network = { path = "../network" }
# Logging
chrono = "0.4"
log = "0.3"
fern = "0.4"
# Command-line
clap = "2.22"

[[bin]]
name = "screeps-rs-client"
doc = false

[replace]
"rusttype:0.2.1" = { git = "https://github.com/daboross/rusttype.git", branch = "possibly-fix-rasterizer-akashi-font" }
