[package]
name = "screeps-rs-ui"
version = "0.1.5"
authors = ["David Ross <daboross@daboross.net>"]
description = "User interface for a work in progress native Screeps client."

repository = "https://github.com/daboross/screeps-rs"

readme = "../README.md"

keywords = []
categories = ["games"]
license = "MIT"

[lib]
path = "src/rust/lib.rs"

[dependencies]
# Graphics
glium = "0.19"
glutin = "0.11"
rusttype = "0.3"
time = "0.1"
conrod = { version = "0.57", features = ["winit", "glium"] }
conrod_derive = "0.1.0"
# Types:
screeps-api = { version = "0.4", default-features = false }
# Networking
screeps-rs-network = { path = "../network" }
# Logging
chrono = "0.4"
log = "0.4"
fern = "0.5"
# Command-line
clap = "2.22"

[[bin]]
name = "screeps-rs-client"
doc = false
